--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "egg-ts-service",
   "version": "1.0.0",
   "description": "服务层",
+  "main": "index.js",
+  "types": "index.d.ts",
   "eggPlugin": {
     "name": "tsService"
   },
@@ -11,6 +13,7 @@
     "egg-plugin"
   ],
   "dependencies": {
+    "egg-ts-router": "^1.0.0",
     "tern": "^0.24.2"
   },
   "devDependencies": {
